tests/NormalTests/paczka1/small_fuzzy/90371903.err
Error in line 1: Hr2x S665 52,1
Error in line 10: Hr2x S796 30,9
Error in line 8: bR5i S796 55,8
